--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Shift &mdash; Free Website Template, Free HTML5 Template by FreeHTML5.co</title>
+	<title>Samantha J. Hou</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FreeHTML5.co" />
 
 	<!-- 
 	//////////////////////////////////////////////////////
@@ -61,11 +58,11 @@
 	<nav class="fh5co-nav" role="navigation">
 		<div class="container">
 			<div class="fh5co-top-logo">
-				<div id="fh5co-logo"><a href="index.html">Shift</a></div>
+				<div id="fh5co-logo"><a href="index.html">Samantha J. Hou</a></div>
 			</div>
 			<div class="fh5co-top-menu menu-1 text-center">
 				<ul>
-					<li><a href="work.html">Work</a></li>
+					<li><a href="work.html">Works</a></li>
 					<li><a href="about.html">Profile</a></li>
 					<li class="has-dropdown">
 						<a href="#">Dropdown</a>
@@ -93,7 +90,7 @@
 		<div class="container">
 			<div class="row top-line animate-box">
 				<div class="col-md-7 col-md-push-5 text-left intro">
-					<h2>Shift is a free html5 template to showcase your work. <span class="fh5co-highlight">Made with <i class="icon-heart2"></i> by <a href="http://freehtml5.co">FreeHTML5.co</a> </span></h2>
+					<h2>Hi there I'm a UX Researcher - </h2> <h4>a true advocate of the user. Let me help you design products that are delightful and meaningful to your users.<span class="fh5co-highlight"></span></h4>
 					<!-- <h2>Shift is a Collection of a Beautiful &amp; Premium Themes.</h2> -->
 				</div>
 				
